--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -20,9 +20,11 @@
 *.rar
 
 # IntelliJ
-*.idea
-*out
+*.idea/
+*out/
 *.iml
+*.xml
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
